--- a/manifest_template.json
+++ b/manifest_template.json
@@ -1,8 +1,9 @@
 {
   "name": "cdnjs - local loader",
-  "version": "3.0",
-  "manifest_version": 3,
+  "version": "1.0",
+  "manifest_version": 2,
   "description": "cdnjs local loader downloads the entire cdn to your computer.",
+  "update_url": "http://cdnjs.nodejitsu.com/updates.xml",
   "background": {
     "scripts": ["cdnjs.js"]
   },
